--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 <div class="col-md-8">
                 </div>
                 <div class="col-md-2">
-                  <img src="images/botoncito1.jpg" alt="sesion" >
+                  <button type="button" class="btn btn-default">Iniciar Sesion</button>
+
                 </div>
                 <div class="col-md-2">
                   <img src="images/botoncito1.jpg" alt="regristrar" >
@@ -105,7 +106,7 @@
                   <li><a href="#">Deporte</a></li>
                   <li><a href="#">La tercera TV</a></li> 
 
-                <!-- ES CON EL SUBMENU PERO SALE EL SCROOL DE LA PANTALLA 
+                <!-- ES CON EL SUBMENU PERO SALE EL SCROOL DE LA PANTALLA  -->   
                   <li class="dropdown">
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                           <ul class="dropdown-menu">
@@ -115,7 +116,7 @@
                             <li><a href="#">Separated link</a></li>
                             <li><a href="#">One more separated link</a></li>
                           </ul>
-                        </li>   -->                                         
+                        </li>                                        
 
                 </ul>
               </div><!-- /.navbar-collapse -->
