header con estilos

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <!-- Baner Publicidad -->
         <div class="row">
            <div class="col-md-12">
-              <img src="images/publih.jpg" alt="Publicidad">
+              <img src="images/batman.jpg" alt="Publicidad">
            </div>
         </div>
 
         <!-- Header -->
-        <div class="row">
+        <div class="row ah">
              <!-- Logo -->
              <div class="col-md-6">
                 <img src="images/latercera.jpg" alt="LaTercera" >
@@ -39,25 +39,30 @@
           <div class="col-md-6">
              <!--<img src="images/link1.jpg" alt="Link1"> -->
              <!--cajita 1 donde esta sesion etc-->
-             <div class="row">
-                <div class="col-md-8">
+             <div class="row mh">
+                <div class="col-md-6">
                 </div>
-                <div class="col-md-2">
-                  <button type="button" class="btn btn-default">Iniciar Sesion</button>
 
+                <div class="col-md-3">
+                  <button type="button" class="btn btn-primary">Iniciar sesion</button>                 
                 </div>
-                <div class="col-md-2">
-                  <img src="images/botoncito1.jpg" alt="regristrar" >
+                <div class="col-md-3">
+                  <button type="button" class="btn btn-success">Registrate</button>
                 </div>
              </div>
              <!--Fin cajita 1 donde esta sesion etc-->
 
              <!--cajita 2 -->
-             <div class="row">
-                <div class="col-md-4">
+             <div class="row buscador">
+                <div class="col-md-5">
                 </div>
-                <div class="col-md-8">
-                  <img src="images/buscador.jpg" alt="buscador" >
+                <div class="col-md-7">
+                    <form class="navbar-form navbar-left" role="search">
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                      </div>
+                      <button type="submit" class="btn btn-default">buscador</button>
+                    </form>                  
                 </div> 
              </div>
              <!--Fin de cajita 2 -->
@@ -67,16 +72,19 @@
                 <div class="col-md-6">
                 </div>
                 <div class="col-md-1">
-                  <img src="images/icono1.jpg" alt="facebook" >
+                  <a href=”#”><img src="images/pinter.png" alt="pinterest" ></a>
                 </div>
                 <div class="col-md-1">
-                  <img src="images/icono1.jpg" alt="twitter" >
+                  <a href=”#”><img src="images/facebook.gif" alt="facebook" ></a>
                 </div>
                 <div class="col-md-1">
-                  <img src="images/icono1.jpg" alt="linkedin" >
+                  <a href=”#”><img src="images/twitter.png" alt="twitter" ></a>
+                </div>
+                <div class="col-md-1">
+                  <a href=”#”><img src="images/linkedin.png" alt="linkedin" ></a>
                 </div>
                 <div class="col-md-2">
-                  <img src="images/botoncito1.jpg" alt="grupo copesa" >
+                  <a href=”#”><img src="images/copesa.jpg" alt="grupo copesa" ></a>
                 </div>
              </div>
              <!--Fin de cajita 3 -->
