noticias de cuatro columnas

--- a/index.html
+++ b/index.html
@@ -396,20 +396,22 @@
                 </div>
              </div>
              <!--Fin de barrita como pestaña-->
-             <div class="row">
-                <div class="col-md-3">
-                  <img src="images/noticias-de-cuatro.jpg" alt="noticia pequeñas 1" >
+             <!--Noticias de cuatro columnas-->
+               <div class="row">
+                  <div class="col-md-3">
+                    <img src="images/lambayequenoti1.jpg" alt="Lamballeque" >
+                  </div>
+                  <div class="col-md-3">
+                    <img src="images/armasnoti2.jpg" alt="armas de la FFPP" >
+                  </div>
+                  <div class="col-md-3">
+                    <img src="images/metropolitanoti3.jpg" alt="metropolitano y el metro" >
+                  </div>
+                  <div class="col-md-3">
+                    <img src="images/heridosnoti4.jpg" alt="Diez personas heridas dejo choque en huacho" >
+                  </div>
                 </div>
-                <div class="col-md-3">
-                  <img src="images/noticias-de-cuatro.jpg" alt="noticia pequeñas 2" >
-                </div>
-                <div class="col-md-3">
-                  <img src="images/noticias-de-cuatro.jpg" alt="noticia pequeñas 3" >
-                </div>
-                <div class="col-md-3">
-                  <img src="images/noticias-de-cuatro.jpg" alt="noticia pequeñas 4" >
-                </div>
-              </div>
+              <!--Fin de noticias de cuatro columnas-->
 
           </div>
           <!--noticias derecha con video  PROFE EN ESTA PARTE COMO SERIA SUPUESTAMENTE ES LA PARTE  DONDE ESTA EL VIDEO DONDE ETSA LA BARRITA OSCURA Y ENCIMA UNA BARRITA LARGA Y LOS DOS CIRCULOS
