--- a/noticia.html
+++ b/noticia.html
@@ -255,7 +255,7 @@
         <!-- FIN NAVEGADOR -->
 
        <!--NOTICIA PRINCIPAL CON PUBLICIDAD-->
-          <div class="row">
+          <div class="row letrin">
               <div class="col-md-9">
                 <h1> <b> Neque porro quisquam est qui dolorem 
                   ipsum qui dor sit amet, consectetur, adipisci velit porro hye quim est qui dolorem
@@ -268,8 +268,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <img src="images/fujimori.jpg" alt="fujimori pronuncio su delito">
+                        <span class="texto-foto">Alberto Fujimori</span>
 
-                        <br>
                         <br>
                         <p align="justify">Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño.</p><br>
                         <p align="justify"> El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición
