las publicidades de la principal

--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                 <!-- Baner Publicidad -->
                 <div class="row">
                    <div class="col-md-12">
-                      <img src="images/publih.jpg" alt="Publicidad">
+                      <img src="images/publichi1.jpg" alt="Publicidad">
                    </div>
                 </div>
                 <!-- Baner Publicidad -->
@@ -860,7 +860,7 @@
                    <!-- Baner Publicidad -->
                    <div class="row">
                       <div class="col-md-12">
-                         <img src="images/publih.jpg" alt="Publicidad">
+                         <img src="images/publiconexion.jpg" alt="Publicidad">
                       </div>
                    </div>
                    <!-- Baner Publicidad -->
