footer, espectaculos, carrusel y labels

--- a/index.html
+++ b/index.html
@@ -284,21 +284,21 @@
     <div class="item active">
       <img src="images/alan1.jpg" alt="...">
             <div class="carousel-caption">
-               fsdfsdfdsfsd
+               Presidente Piñera recibirá en Cerro Castillo a comitivas panamericanas
             </div>
       </div>
 
       <div class="item">
       <img src="images/alan2.jpg" alt="...">
             <div class="carousel-caption">
-               fsdfsdfdsfsd
+               Bachelet reivindica figura de Allende y alude a "errores" políticos
             </div>
       </div>
 
       <div class="item">
       <img src="images/alan3.jpg" alt="...">
             <div class="carousel-caption">
-               fsdfsdfdsfsd
+               Los impresionantes números de Sampaoli que lo ubican entre los mejores técnicos de la "Roja" 
             </div>
       </div>
 
@@ -383,23 +383,23 @@
              <!--Barrita como pestaña>-->
              <div class="row">
                 <div class="col-md-3">
-                  <img src="images/barritapequena.jpg" alt="barrita pequeña 1" >
+                  <span class="label label-danger">Rescate</span>
                 </div>
                  <div class="col-md-3">
-                  <img src="images/barritapequena.jpg" alt="barrita pequeña 2" >
+                  <span class="label label-danger">Operación</span>
                 </div>
                  <div class="col-md-3">
-                  <img src="images/barritapequena.jpg" alt="barrita pequeña 3" >
+                  <span class="label label-danger">Tráfico</span>
                 </div>
                  <div class="col-md-3">
-                  <img src="images/barritapequena.jpg" alt="barrita pequeña 4" >
+                  <span class="label label-danger">Accidente</span>
                 </div>
              </div>
              <!--Fin de barrita como pestaña-->
              <!--Noticias de cuatro columnas-->
                <div class="row">
                   <div class="col-md-3">
-                    <img src="images/lambayequenoti1.jpg" alt="Lamballeque" >
+                    <img src="images/lambayequenoti1.jpg" alt="Lambayeque" >
                   </div>
                   <div class="col-md-3">
                     <img src="images/armasnoti2.jpg" alt="armas de la FFPP" >
@@ -672,21 +672,48 @@
           <div class="col-md-12">
 
               <div class="row">
+
+
                 <div class="col-md-6">
-                  <img src="images/notidepor.jpg" alt="noticia pequeñas 1" >
+                  <div class="panel panel-danger">
+                      <div class="panel-heading">Papa Francisco dedica emotiva carta a Gustavo Cerati </div>
+                      <img src="images/mundo1.jpg" alt="Mundo Cerati" >
+                      <div class="panel-body">La madre del cantante leyó en un programa de televisión la misiva que el Sumo Pontífice le respondió al artista plástico Gustavo Masó, quien le escribió para pedir oración por su amigo que lleva tres años en estado de coma.</div>
+                  </div>
                 </div>
+
+
                 <div class="col-md-6">
-                  <img src="images/notidepor.jpg" alt="noticia pequeñas 2" >
+                  <div class="panel panel-danger">
+                      <div class="panel-heading">Don Francisco cumple nueve meses fuera de la televisión chilena</div>
+                      <img src="images/mundo2.jpg" alt="Don Francisco" >
+                      <div class="panel-body">Se trata de la mayor ausencia en sus 51 años de carrera. "No es lo que me acomoda, pero lo he tenido que aceptar", dice él. Sábado gigante salió de pantalla en diciembre pasado, pero ahora Canal 13 asegura que hay planes para revivirlo en el país.</div>
+                  </div>
                 </div>
+
               </div>
 
+
               <div class="row">
+
+
                 <div class="col-md-6">
-                  <img src="images/notidepor.jpg" alt="noticia pequeñas 1" >
+                  <div class="panel panel-danger">
+                      <div class="panel-heading">El giro temático que tendrá el matinal Buenos Días a Todos</div>
+                      <img src="images/mundo3.jpg" alt="Buenos Días a Todos" >
+                      <div class="panel-body">Hace dos meses, el matinal de TVN realizó un cambio en su pauta para enfatizar los temas de servicio, con resultados dispares en la audiencia. Aquí cómo se hace uno de esos capítulos.</div>
+                  </div>
                 </div>
+
+
                 <div class="col-md-6">
-                  <img src="images/notidepor.jpg" alt="noticia pequeñas 2" >
+                  <div class="panel panel-danger">
+                      <div class="panel-heading">TVN emitirá Isabel, la serie española más exitosa del último año</div>
+                      <img src="images/mundo4.jpg" alt="Don Francisco" >
+                      <div class="panel-body">La historia sobre la reina Isabel la Católica se dará desde el lunes 16 en segunda franja nocturna. Además, la serie, fue comprada por Rusia, Líbano y Uruguay, se transmitirá en idioma original: español castizo.</div>
+                  </div>
                 </div>
+
               </div>
           </div>
        </div>
@@ -728,7 +755,7 @@
                 <!-- BARRA Footer -->
                 <div class="row">
                   <div class="col-md-12">
-                    <img src="images/footer.jpg" alt="separador" >
+                    <img src="images/footerlt.jpg" alt="Titulo Footer" >
                   </div>
                 </div>
                 <!-- BARRA Footer -->
@@ -747,19 +774,51 @@
                                <div class="row">
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">La Tercera</a>
                                   </div>
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">La Hora</a>
                                   </div>
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">La Cuarta</a>
                                   </div>
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">Qué Pasa</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Paula</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Mujer</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Más Deco</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Mouse</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Icarito</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Diario Concepción</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Ciper</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Pulso</a>
                                   </div>
 
                                </div>
@@ -772,19 +831,51 @@
                                <div class="row">
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">Grupo Copesa</a>
                                   </div>
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">Biut</a>
                                   </div>
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">Club La Tercera</a>
                                   </div>
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">Laborum</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Zoom Inmobiliario</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Zoom Automotriz</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Viajes</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Promo Service</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Unlimited</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Agrupemonos</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">PUBLICIDAD</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Tarifario</a>
                                   </div>
 
                                </div>
@@ -797,19 +888,51 @@
                                <div class="row">
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">GRUPO DIAL</a>
                                   </div>
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">Duna</a>
                                   </div>
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">Zero</a>
                                   </div>
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <a href="#">Carolina</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">MÓVILES</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">iPhone</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">BlackBerry</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Android</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">CONTACTO</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Información</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Periodistas</a>
+                                  </div>
+
+                                  <div class="col-md-12">
+                                     <a href="#">Suscripciones</a>
                                   </div>
 
                                </div>
@@ -822,20 +945,9 @@
                                <div class="row">
 
                                   <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
+                                     <img src="images/grupocopesa.jpg" alt="Copesa Footer" >
                                   </div>
 
-                                  <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
-                                  </div>
-
-                                  <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
-                                  </div>
-
-                                  <div class="col-md-12">
-                                     <img src="images/barfooter.jpg" alt="noticia pequeñas 4" >
-                                  </div>
 
                                </div>
                             </div>
