--- a/index.html
+++ b/index.html
@@ -513,12 +513,19 @@
 
 
        <!--BLOQUE DE NOTICIAS CUADRADAS-->
-       <div class="row">
+       <div class="row elpadre">
           <div class="col-md-12">
 
-              <div class="row">
+              <div class="row toditomas">
                 <div class="col-md-3">
-                  <img src="images/noticuadrados.jpg" alt="noticia pequeñas 1" >
+                  <div class="masnoticiasvermas">
+                          <div class="lafotazo">
+                             <!--<img src="images/relacionoticia2.jpg" alt="1 noticias">-->
+                          </div>
+                          <div class="pocofloro">
+                            <a href="#"><p>Otro asalto a cambistas</p></a>
+                          </div>
+                      </div>
                 </div>
                 <div class="col-md-3">
                   <img src="images/noticuadrados.jpg" alt="noticia pequeñas 2" >
